Fixed capitalization and added phone & email to contact page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Code Like a Girl</title>
+		<title>Code Like A Girl</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400">
@@ -51,7 +51,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Code Like a Girl</a>
+					<a class="navbar-brand" href="index.html">Code Like A Girl</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -79,7 +79,7 @@
                 <div class="row">
                     <div class="col-sm-10 col-sm-offset-1 page-title wow fadeIn">
                         <span aria-hidden="true" class="icon_profile"></span>
-                        <h1>About Code Like a Girl</h1>
+                        <h1>About Code Like A Girl</h1>
                         <p></p>
                     </div>
                 </div>
@@ -93,10 +93,10 @@
 	                <div class="col-sm-12 about-us-text wow fadeInLeft">
 	                    <h3>Our Mission</h3>
 	                    <p>
-	                    	The mission of Code Like a Girl is to create an environment conducive to the teaching of 
+	                    	The mission of Code Like A Girl is to create an environment conducive to the teaching of 
 				technology education to girls and to combat the negative effects of stereotyping that oftentimes preclude 
 				girls from seeking an education in technology oriented fields like computer science and engineering. 
-				To this end, the organization Code Like a Girl was founded to host classes and workshops that aim to create places 
+				To this end, the organization Code Like A Girl was founded to host classes and workshops that aim to create places 
 				where girls can meet like-minded peers and explore their interests in STEM fields.
 				</p>
 	                </div>
@@ -117,7 +117,7 @@
 		                <div class="team-box wow fadeInUp">
 		                    <img src="assets/img/team/shania.PNG" alt="" data-at2x="assets/img/team/shania.PNG">
 		                    <h3>Shania Khatri</h3>
-		                    <p>Shania Khatri is an avid programmer and advocate of STEM education. She is the founder of Code Like a Girl and is committed creating opportunities for like-minded girls to meet and explore their interests in the STEM fields.</p>
+		                    <p>Shania Khatri is an avid programmer and advocate of STEM education. She is the founder of Code Like A Girl and is committed creating opportunities for like-minded girls to meet and explore their interests in the STEM fields.</p>
 		                    <div class="team-social">		                        
 		                        <a class="big-link-2" href="#"><span class="social_facebook"></span></a>
 		                        <a class="big-link-2" href="#"><span class="social_linkedin"></span></a>
@@ -184,9 +184,9 @@
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
-		                                	"Code Like a Girl is something I wish I had when I was younger. I never wanted to take coding classes with all the boys back then, they all had cooties!
+		                                	"Code Like A Girl is something I wish I had when I was younger. I never wanted to take coding classes with all the boys back then, they all had cooties!
 											Obviously now that I'm older it's different, but I know for sure that younger me would have really appreciated this program."<br>
-		                                	<a href="http://shania.khatri.io">Shania Khatri, Founder of Code Like a Girl</a>
+		                                	<a href="http://shania.khatri.io">Shania Khatri, Founder of Code Like A Girl</a>
 		                                </p>
 	                                </div>
 	                			</div>
@@ -264,7 +264,7 @@
                         <h4>About Us</h4>
                         <div class="footer-box-text">
 	                        <p>
-	                        	The mission of Code Like a Girl is to create an environment conducive to the teaching of technology education to girls.
+	                        	The mission of Code Like A Girl is to create an environment conducive to the teaching of technology education to girls.
 	                        </p>
 	                        <p><a href="about.html">Read more...</a></p>
                         </div>
