--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Code Like a Girl</title>
+		<title>Code Like A Girl</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400">
@@ -51,7 +51,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Code Like a Girl</a>
+					<a class="navbar-brand" href="index.html">Code Like A Girl</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -92,7 +92,9 @@
 	            <div class="row">
 	                <div class="col-sm-7 contact-form wow fadeInLeft">
 	                    <p>
-	                    	The best way to reach us is via email, but if it's urgent feel free to give us a call. You can stay up to date with our latest news by signing up for our mailing list.
+							The best way to reach us is via email, but if it's urgent feel free to give us a call. You can stay up to date with our latest news by signing up for our mailing list.</br>
+							Our email is <a href="mailto:codelikeagirl@outlook.com">codelikeagirl@outlook.com</a></br>
+							Our phone number is <span class="colored-text">412-818-1219</span>
 	                    </p>
 	                    <form role="form" action="assets/contact.php" method="post">
 	                    	<div class="form-group">
@@ -133,7 +135,7 @@
                         <h4>About Us</h4>
                         <div class="footer-box-text">
 	                        <p>
-	                        	The mission of Code Like a Girl is to create an environment conducive to the teaching of technology education to girls.
+	                        	The mission of Code Like A Girl is to create an environment conducive to the teaching of technology education to girls.
 	                        </p>
 	                        <p><a href="about.html">Read more...</a></p>
                         </div>
