--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Code Like a Girl</title>
+		<title>Code Like A Girl</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400">
@@ -60,7 +60,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Code Like a Girl</a>
+					<a class="navbar-brand" href="index.html">Code Like A Girl</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -90,19 +90,19 @@
                         <li>
                             <img src="assets/img/slider/3.jpg">
                             <div class="flex-caption">
-                            	Code Like a Girl is an initiative created to encourage girls to code!
+                            	Code Like A Girl is an initiative created to encourage girls to code!
                             </div>
                         </li>
                         <li>
                             <img src="assets/img/slider/2.jpg">
                             <div class="flex-caption">
-                            	Code Like a Girl is an initiative created to encourage girls to code!
+                            	Code Like A Girl is an initiative created to encourage girls to code!
                             </div>
                         </li>
                         <li>
                             <img src="assets/img/slider/1.jpg">
                             <div class="flex-caption">
-                            	Code Like a Girl is an initiative created to encourage girls to code!
+                            	Code Like A Girl is an initiative created to encourage girls to code!
                             </div>
                         </li>
                     </ul>
@@ -115,7 +115,7 @@
         	<div class="container">
         		<div class="row">
 	        		<div class="col-sm-12 wow fadeInLeftBig">
-	            		<h1>We are <span class="colored-text">Code Like a Girl</span>, and we help girls discover technology.</h1>
+	            		<h1>We are <span class="colored-text">Code Like A Girl</span>, and we help girls discover technology.</h1>
 	            		<p>
 	            			Our mission is to provide an environment where girls can feel comfortable pursuing their interests in computer science.
 	            		</p>
@@ -177,7 +177,7 @@
 		                <div class="work wow fadeInUp">
 		                    <img src="assets/img/portfolio/work1.jpg" alt="Lorem Website" data-at2x="assets/img/portfolio/work1.jpg">
 		                    <h3>Great Expectations 2017</h3>
-		                    <p>We will be hosting Code Like a Girl sessions during the Great Expectations program at Fairview Elementary School</p>
+		                    <p>We will be hosting Code Like A Girl sessions during the Great Expectations program at Fairview Elementary School</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work1.jpg"><span class="icon_search"></span></a>
 		                        <a class="big-link-2" href="workshops.html"><span class="icon_link"></span></a>
@@ -240,9 +240,9 @@
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
-		                                	"Code Like a Girl is something I wish I had when I was younger. I never wanted to take coding classes with all the boys back then, they all had cooties!
+		                                	"Code Like A Girl is something I wish I had when I was younger. I never wanted to take coding classes with all the boys back then, they all had cooties!
 											Obviously now that I'm older it's different, but I know for sure that younger me would have really appreciated this program."<br>
-		                                	<a href="http://shania.khatri.io">Shania Khatri, Founder of Code Like a Girl</a>
+		                                	<a href="http://shania.khatri.io">Shania Khatri, Founder of Code Like A Girl</a>
 		                                </p>
 	                                </div>
 	                			</div>
@@ -320,7 +320,7 @@
                         <h4>About Us</h4>
                         <div class="footer-box-text">
 	                        <p>
-	                        	The mission of Code Like a Girl is to create an environment conducive to the teaching of technology education to girls.
+	                        	The mission of Code Like A Girl is to create an environment conducive to the teaching of technology education to girls.
 	                        </p>
 	                        <p><a href="about.html">Read more...</a></p>
                         </div>
