--- a/workshops.html
+++ b/workshops.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Code Like a Girl</title>
+		<title>Code Like A Girl</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400">
@@ -51,7 +51,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Code Like a Girl</a>
+					<a class="navbar-brand" href="index.html">Code Like A Girl</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -94,7 +94,7 @@
 	                    <h3>A brief description of our workshops</h3>
 	                    <p>
 	                    	Introduce your girls to the exciting world of code!
-The goal of Code Like a Girl is to  introduce girls to the fundamental structure of programming. This course will utilize <a href="http://scratch.mit.edu" class="colored-text">Scratch</a>, a program developed for kids, and facilitated by a group of experienced high school students hoping to inspire young girls to pursue STEM topics in the future. Participants will gain a basic understanding of the definition of programming, how to use Scratch, loops, if-then conditionals, and variables.
+The goal of Code Like A Girl is to  introduce girls to the fundamental structure of programming. This course will utilize <a href="http://scratch.mit.edu" class="colored-text">Scratch</a>, a program developed for kids, and facilitated by a group of experienced high school students hoping to inspire young girls to pursue STEM topics in the future. Participants will gain a basic understanding of the definition of programming, how to use Scratch, loops, if-then conditionals, and variables.
 	                	</p>
 	                </div>
 	            </div>
@@ -150,7 +150,7 @@ The goal of Code Like a Girl is to  introduce girls to the fundamental structure
 	                    <p>
 	                    	Great Expectations is a five week, after-school program held at Fairview Elementary, starting shortly after the winter break.
 							The program is operated by the FPTO and Parent volunteers, along with the much appreciated assistance and effort from the Fairview teachers, students, custodial staff, secretaries, Principal, and GE instructors.
-							The first Code Like a Girl workshop will be offered during Great Expectations 2017. For more information please visit the FPTO website <a href="http://www.fpto.net/GE">here</a>.
+							The first Code Like A Girl workshop will be offered during Great Expectations 2017. For more information please visit the FPTO website <a href="http://www.fpto.net/GE">here</a>.
 	                    </p>
 	                </div>
 	                <div class="col-sm-6 services-half-width-text wow fadeInUp">
@@ -188,7 +188,7 @@ The goal of Code Like a Girl is to  introduce girls to the fundamental structure
                         <h4>About Us</h4>
                         <div class="footer-box-text">
 	                        <p>
-	                        	The mission of Code Like a Girl is to create an environment conducive to the teaching of technology education to girls.
+	                        	The mission of Code Like A Girl is to create an environment conducive to the teaching of technology education to girls.
 	                        </p>
 	                        <p><a href="about.html">Read more...</a></p>
                         </div>
