--- a/about.html
+++ b/about.html
@@ -184,8 +184,8 @@
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
-		                                	"Code Like A Girl is something I wish I had when I was younger. I never wanted to take coding classes with all the boys back then, they all had cooties!
-											Obviously now that I'm older it's different, but I know for sure that younger me would have really appreciated this program."<br>
+		                                	"Code Like A Girl is something I wish I had when I was younger. I never felt comfortable in coding classes that were all boys when I was younger. Not pursuing computer science when I was younger because I didn't feel like I belonged was a major detriment to my learning.
+								Now that I'm older it's different, but I know for sure that younger me would have really appreciated this program."<br>
 		                                	<a href="http://shania.khatri.io">Shania Khatri, Founder of Code Like A Girl</a>
 		                                </p>
 	                                </div>
@@ -196,10 +196,9 @@
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
-		                                	"Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip 
-		                                	ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit 
-		                                	lobortis nisl ut aliquip ex ea commodo consequat..."<br>
-		                                	<a href="#">Minim Veniam, nostrud.com</a>
+		                                	I wanted to be the catalyst for the girls like me who did not have the same support and opportunities in this field. 
+								It is an honor to introduce young girls to the world of code and encourage their love of science"<br>
+		                                	<a href="#">Claudia Simon, Code Like A Girl Instructor</a>
 		                                </p>
 	                                </div>
 	                			</div>
