--- a/about.html
+++ b/about.html
@@ -127,9 +127,9 @@
 	                </div>
 	                <div class="col-sm-3">
 		                <div class="team-box wow fadeInDown">
-		                    <img src="assets/img/team/bliss.PNG" alt="" data-at2x="assets/img/team/bliss.PNG">
+		                    <img src="assets/img/team/bliss.png" alt="" data-at2x="assets/img/team/bliss.PNG">
 		                    <h3>Bliss Uribe</h3>
-		                    <p>Bliss Uribe will be studying Biomedical Engineering at Case Western Reserve University in the Fall of 2017. She is also an avid programmer, STEM education advocate, and enjoys swimming in her free time.</p>
+		                    <p>Bliss Uribe is a Senior at Fox Chapel Area High School. She is also an avid programmer, STEM education advocate, and enjoys swimming in her free time.</p>
 		                    <div class="team-social">		                        
 		                        <a class="big-link-2" href="#"><span class="social_facebook"></span></a>
 					<a class="big-link-2" href="#"><span class="social_twitter"></span></a>
