Updated with more images and content

--- a/workshops.html
+++ b/workshops.html
@@ -90,7 +90,8 @@
         <div class="services-full-width-container">
         	<div class="container">
 	            <div class="row">
-	                <div class="col-sm-12 services-full-width-text wow fadeInLeft">
+	                <img src="assets/img/portfolio/poster.jpg" class="wow fadeInDown">
+					<div class="col-sm-12 services-full-width-text wow fadeInLeft">
 	                    <h3>A brief description of our workshops</h3>
 	                    <p>
 	                    	Introduce your girls to the exciting world of code!
