--- a/about.html
+++ b/about.html
@@ -89,7 +89,8 @@
         <!-- About Us Text -->
         <div class="about-us-container">
         	<div class="container">
-	            <div class="row">
+	            <img class="wow fadeInDown" src="assets/img/team/team.jpg" alt="" data-at2x="assets/img/team/team.jpg">
+				<div class="row">
 	                <div class="col-sm-12 about-us-text wow fadeInLeft">
 	                    <h3>Our Mission</h3>
 	                    <p>
